--- a/proyecto_integrador3/src/main/resources/templates/index.html
+++ b/proyecto_integrador3/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-  <link rel="stylesheet" href="../static/css/styles.css">
+  <link rel="stylesheet" href="/css/styles.css">
   <title>Home</title>
 </head>
 
@@ -25,12 +25,12 @@
     <div class=" d-flex justify-content-end">
       <p class="tituloredes">SIGUENOS EN NUESTRAS REDES: &nbsp</p>
       <div class="iconos3">
-        <div class="ms-2"><a href="#"><img class="iconos" src="../static/imagenes/icons8-instagram-50 black.png" alt=""></a>
+        <div class="ms-2"><a href="#"><img class="iconos" src="/imagenes/icons8-instagram-50 black.png" alt=""></a>
         </div>
-        <div class="ms-2"><a href="#"><img class="iconos" src="../static/imagenes/icons8-tik-tok-50 black.png" alt=""></a></div>
-        <div class="ms-2"><a href="#"><img class="iconos" src="../static/imagenes/icons8-facebook-50 black.png" alt=""></a>
+        <div class="ms-2"><a href="#"><img class="iconos" src="/imagenes/icons8-tik-tok-50 black.png" alt=""></a></div>
+        <div class="ms-2"><a href="#"><img class="iconos" src="/imagenes/icons8-facebook-50 black.png" alt=""></a>
         </div>
-        <div class="ms-2"><a href="#"><img class="iconos" src="../static/imagenes/icons8-youtube-play-50 black.png" alt=""></a>
+        <div class="ms-2"><a href="#"><img class="iconos" src="/imagenes/icons8-youtube-play-50 black.png" alt=""></a>
         </div>
       </div>
     </div>
@@ -44,7 +44,7 @@
         <div class="collapse navbar-collapse navbarlogo" id="navbarTogglerDemo01">
           <a href="">
             <div class="imagen-logo alvaro">
-              <img src="../static/imagenes/Nani-removebg-preview.png" class=" img-logo" alt="">
+              <img src="/imagenes/Nani-removebg-preview.png" class=" img-logo" alt="">
             </div>
           </a>
           <ul class="navbar-nav navbar4 container-fluid p-0">
@@ -90,7 +90,7 @@
     <div class="contenido-header">
       <div class="header-flex">
         <div class="img-fondo-header">
-          <img class="img-header-banner img-fluid" src="../static/imagenes/Nani-removebg-preview.png" alt="">
+          <img class="img-header-banner img-fluid" src="/imagenes/Nani-removebg-preview.png" alt="">
         </div>
         <div class="titulo1">
           <h1 class=" h1estetica">NANI ESTETICA</h1>
@@ -120,7 +120,7 @@
       <h3 class="text-center">BENEFICIOS DE LOS TRATAMIENTOS FACIALES</h3>
       <div class="tarjetas-centrales">
         <div class="card my-3 text-center tarjeta1 borde border-0" style="width: 40rem;">
-          <img src="../static/imagenes/istockphoto-968940310-1024x1024.jpg" class="card-img-top" alt="...">
+          <img src="/imagenes/istockphoto-968940310-1024x1024.jpg" class="card-img-top" alt="...">
         </div>
         <div class="div-parrafos">
           <p class="text-center parrafos-main">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed repellendus
@@ -134,7 +134,7 @@
 
       <div class="tarjetas-centrales">
         <div class="card my-3 text-center tarjeta2 borde border-0" style="width: 40rem;">
-          <img src="../static/imagenes/istockphoto-968940310-1024x1024.jpg" class="card-img-top" alt="...">
+          <img src="/imagenes/istockphoto-968940310-1024x1024.jpg" class="card-img-top" alt="...">
         </div>
         <div class="div-parrafos">
           <p class="text-center parrafos-main">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora
