--- a/proyecto_integrador3/src/main/resources/templates/login.html
+++ b/proyecto_integrador3/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
-        <link rel="stylesheet" href="../static/css/styles.css">
+        <link rel="stylesheet" href="/css/styles.css">
         <title>Iniciar Sesion</title>
       </head>
 <body class="body-login">
