--- a/proyecto_integrador3/src/main/resources/templates/registrarse.html
+++ b/proyecto_integrador3/src/main/resources/templates/registrarse.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
         <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
-        <link rel="stylesheet" href="../static/css/styles.css">
+        <link rel="stylesheet" href="/css/styles.css">
         <title>Registrase</title>
       </head>
 <body class="body-login">
