--- a/proyecto_integrador3/src/main/resources/templates/homeCliente.html
+++ b/proyecto_integrador3/src/main/resources/templates/homeCliente.html
@@ -1,16 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="https://kit.fontawesome.com/c81a1e63cb.js" crossorigin="anonymous"></script>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-        <link rel="stylesheet" href="./css/styles.css">
-        <title>Solicitar Turno</title>
-      </head>
-<body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://kit.fontawesome.com/c81a1e63cb.js" crossorigin="anonymous"></script>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+  <link rel="stylesheet" href="./css/styles.css">
+  <title>Home Cliente</title>
+</head>
+
+<body class="body-interno">
+
+  <!--Boton flotante de ws-->
   <a href="#" target="_blank" class="boton-flotante">
     <i class="fa-brands fa-whatsapp"></i>
   </a>
@@ -34,7 +38,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse navbarlogo" id="navbarTogglerDemo01">
-        <a href="./home.html">
+        <a href="">
           <div class="imagen-logo ajuste-texto-menu">
             <img src="./imagenes/Nani-removebg-preview.png" class=" img-logo-nav" alt="">
           </div>
@@ -60,8 +64,49 @@
     </div>
   </nav>
 </nav>
-  <main>
-    <p>SOLICITAR TURNO</p>
+
+<main class="">
+  <div class="main-home">
+    <h3>Hola, Cliente</h3>
+  <div class=" container">
+      <div class="  ft">
+        <a href="./misdatosCliente.html">
+          <div class="d-flex justify-content-center align-items-center">
+            <img class="iconos" src="./imagenes/icons8-tarjeta-de-identificación-50.png" alt="">
+            <p class="texto-tarjetas-main-home ms-1 hover">Mis datos</p>
+          </div>
+        </a>
+      </div>
+
+      <div class=" ft ">
+        <a href="./tablamisdatos.html">
+          <div class="d-flex justify-content-center align-items-center">
+            <img class="iconos" src="./imagenes/icons8-más-50.png" alt="">
+            <p class="texto-tarjetas-main-home ms-1 hover">Solicitar turno</p>
+          </div>
+        </a>
+      </div>
+
+      <div class=" ft">
+        <a href="./misturnos.html">
+          <div class="d-flex justify-content-center align-items-center">
+            <img class="iconos" src="./imagenes/icons8-calendario-50.png" alt="">
+            <p class="texto-tarjetas-main-home ms-1 hover">Mis turnos</p>
+          </div>
+        </a>
+      </div>
+
+      <div class=" ft">
+        <a  href="./misconsultas.html">
+          <div class="d-flex justify-content-center align-items-center">
+          <img class="iconos" src="./imagenes/icons8-boleta-de-calificaciones-50.png" alt="">
+          <p class="texto-tarjetas-main-home ms-1 hover">Mis consultas</p>
+        </div>
+        </a>
+      </div>
+      
+</div>
+</div>
   </main>
 
   <footer class="d-flex row p-0">
@@ -131,8 +176,9 @@
     </div>
   </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
 </body>
+
 </html>
