--- a/proyecto_integrador3/src/main/resources/templates/login.html
+++ b/proyecto_integrador3/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
-        <link rel="stylesheet" href="/css/styles.css">
+        <link rel="stylesheet" href="./css/styles.css">
         <title>Iniciar Sesion</title>
       </head>
 <body class="">
@@ -20,12 +20,12 @@
       <div class=" d-flex justify-content-end">
         <p class="tituloredes">SIGUENOS EN NUESTRAS REDES: &nbsp</p>
         <div class="iconos3">
-          <div class="ms-2"><a href="#"><img class="iconos" src="/imagenes/icons8-instagram-50 black.png" alt=""></a>
+          <div class="ms-2"><a href="#"><img class="iconos" src="./imagenes/icons8-instagram-50 black.png" alt=""></a>
           </div>
-          <div class="ms-2"><a href="#"><img class="iconos" src="/imagenes/icons8-tik-tok-50 black.png" alt=""></a></div>
-          <div class="ms-2"><a href="#"><img class="iconos" src="/imagenes/icons8-facebook-50 black.png" alt=""></a>
+          <div class="ms-2"><a href="#"><img class="iconos" src="./imagenes/icons8-tik-tok-50 black.png" alt=""></a></div>
+          <div class="ms-2"><a href="#"><img class="iconos" src="./imagenes/icons8-facebook-50 black.png" alt=""></a>
           </div>
-          <div class="ms-2"><a href="#"><img class="iconos" src="/imagenes/icons8-youtube-play-50 black.png" alt=""></a>
+          <div class="ms-2"><a href="#"><img class="iconos" src="./imagenes/icons8-youtube-play-50 black.png" alt=""></a>
           </div>
         </div>
       </div>
@@ -37,16 +37,16 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse navbarlogo" id="navbarTogglerDemo01">
-            <a href="/index.html">
+            <a href="./index.html">
               <div class="imagen-logo ajuste-texto-menu">
-                <img src="/imagenes/Nani-removebg-preview.png" class=" img-logo-nav" alt="">
+                <img src="./imagenes/Nani-removebg-preview.png" class=" img-logo-nav" alt="">
               </div>
             </a>
           </div>
         </div>
       </nav>
       <div class="d-flex justify-content-center  align-items-center col-12 col-sm-2 cabecera">
-        <a class="registrarse" href="/registrarse.html">INICIAR SESION</a>
+        <a class="registrarse" href="./registrarse.html">INICIAR SESION</a>
       </div>
     </div>
   </nav>
@@ -56,8 +56,8 @@
         </div>
         <div class="col-md-6 px-0">
           <div class="login-box">
-            <img src="/imagenes/Nani-removebg-preview.png" class="avatar" alt="Avatar Image">
-            <h1>Iniciar sesion</h1>
+            <img src="./imagenes/Nani-removebg-preview.png" class="avatar" alt="Avatar Image">
+            <h1 class="py-2">Iniciar sesion</h1>
             <form class="form-login">
               <!-- USERNAME INPUT -->
               <label for="mail">Email</label>
@@ -72,7 +72,7 @@
               <a class="texto"  href="#">Recuperar contraseña</a><br>
             </div>
             <div class="texto-recuperar2">
-              <a class="texto" href="/registrarse.html">¿No tienes cuenta?</a>
+              <a class="texto" href="./registrarse.html">¿No tienes cuenta?</a>
             </div>
             </form>
           </div>
@@ -90,26 +90,26 @@
           <p class="text-center mt-0">Provincia de Buenos Aires</p>
         </div>
         <div class="mb-4 text-center">
-          <p><img class="iconos" src="/imagenes/icons8-teléfono-celular-50.png" alt="">+54 (11)1111-1111</p>
+          <p><img class="iconos" src="./imagenes/icons8-teléfono-celular-50.png" alt="">+54 (11)1111-1111</p>
         </div>
         <div class="mb-4 text-center">
-          <p><img class="iconos" src="/imagenes/icons8-whatsapp-50negro.png" alt="">+54 (11)1111-1111</p>
+          <p><img class="iconos" src="./imagenes/icons8-whatsapp-50negro.png" alt="">+54 (11)1111-1111</p>
         </div>
         <div class="mb-4 text-center">
-          <p class=""><img class="iconos pe-1" src="/imagenes/icons8-correo-50.png" alt="">estoesunaprueba@gmail.com</p>
+          <p class=""><img class="iconos pe-1" src="./imagenes/icons8-correo-50.png" alt="">estoesunaprueba@gmail.com</p>
         </div>
         <div class="text-center iconos3 pb-2">
           <div class="">
-            <a class="link" href="#"><img class=" iconos2" src="/imagenes/icons8-instagram-50 black.png" alt=""></a>
+            <a class="link" href="#"><img class=" iconos2" src="./imagenes/icons8-instagram-50 black.png" alt=""></a>
           </div>
           <div>
-            <a class="link" href="#"><img class=" iconos2" src="/imagenes/icons8-tik-tok-50 black.png" alt=""></a>
+            <a class="link" href="#"><img class=" iconos2" src="./imagenes/icons8-tik-tok-50 black.png" alt=""></a>
           </div>
           <div>
-            <a class="link" href="#"> <img class=" iconos2" src="/imagenes/icons8-facebook-50 black.png" alt=""></a>
+            <a class="link" href="#"> <img class=" iconos2" src="./imagenes/icons8-facebook-50 black.png" alt=""></a>
           </div>
           <div>
-            <a class="link" href="#"><img class=" iconos2" src="/imagenes/icons8-youtube-play-50 black.png" alt=""></a>
+            <a class="link" href="#"><img class=" iconos2" src="./imagenes/icons8-youtube-play-50 black.png" alt=""></a>
           </div>
         </div>
       </div>
@@ -144,7 +144,7 @@
       </div>
     
       <div class="contenedor-logo-final-general">
-        <img class="img-logo-final-general" src="/imagenes/Nani-removebg-preview.png" alt="">
+        <img class="img-logo-final-general" src="./imagenes/Nani-removebg-preview.png" alt="">
       </div>
     </footer>
 
