--- a/proyecto_integrador3/src/main/resources/templates/olvidocontraseña.html
+++ b/proyecto_integrador3/src/main/resources/templates/olvidocontraseña.html
@@ -7,7 +7,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-        <link rel="stylesheet" href="/css/styles.css">
+        <link rel="stylesheet" href="./css/styles.css">
         <title>Restablecer contraseña</title>
       </head>
 <body>
@@ -19,12 +19,12 @@
       <div class=" d-flex justify-content-end">
         <p class="tituloredes">SIGUENOS EN NUESTRAS REDES: &nbsp</p>
         <div class="iconos3">
-          <div class="ms-2"><a href="#"><img class="iconos" src="/imagenes/icons8-instagram-50 black.png" alt=""></a>
+          <div class="ms-2"><a href="#"><img class="iconos" src="./imagenes/icons8-instagram-50 black.png" alt=""></a>
           </div>
-          <div class="ms-2"><a href="#"><img class="iconos" src="/imagenes/icons8-tik-tok-50 black.png" alt=""></a></div>
-          <div class="ms-2"><a href="#"><img class="iconos" src="/imagenes/icons8-facebook-50 black.png" alt=""></a>
+          <div class="ms-2"><a href="#"><img class="iconos" src="./imagenes/icons8-tik-tok-50 black.png" alt=""></a></div>
+          <div class="ms-2"><a href="#"><img class="iconos" src="./imagenes/icons8-facebook-50 black.png" alt=""></a>
           </div>
-          <div class="ms-2"><a href="#"><img class="iconos" src="/imagenes/icons8-youtube-play-50 black.png" alt=""></a>
+          <div class="ms-2"><a href="#"><img class="iconos" src="./imagenes/icons8-youtube-play-50 black.png" alt=""></a>
           </div>
         </div>
       </div>
@@ -37,24 +37,24 @@
           <div class="collapse navbar-collapse navbarlogo" id="navbarTogglerDemo01">
             <a href="">
               <div class="imagen-logo ajuste-texto-menu">
-                <img src="/imagenes/Nani-removebg-preview.png" class=" img-logo-nav" alt="">
+                <img src="./imagenes/Nani-removebg-preview.png" class=" img-logo-nav" alt="">
               </div>
             </a>
             <ul class="navbar-nav navbar4 container-fluid p-0">
               <li class="nav-item">
-                <a class="nav-link py-1 ajuste-texto-menu" href="/tablamisdatos.html">Mis Datos</a>
+                <a class="nav-link py-1 ajuste-texto-menu" href="./tablamisdatos.html">Mis Datos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link py-1 ajuste-texto-menu" href="/solicitartuno.html">Solicitar Turno</a>
+                <a class="nav-link py-1 ajuste-texto-menu" href="./solicitartuno.html">Solicitar Turno</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link  py-1 ajuste-texto-menu" href="/misturnos.html">Mis Turnos</a>
+                <a class="nav-link  py-1 ajuste-texto-menu" href="./misturnos.html">Mis Turnos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link  py-1 ajuste-texto-menu" href="/misconsultas.html">Mis consultas</a>
+                <a class="nav-link  py-1 ajuste-texto-menu" href="./misconsultas.html">Mis consultas</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link  py-1 ajuste-texto-menu" href="/index.html">Cerrar Sesion</a>
+                <a class="nav-link  py-1 ajuste-texto-menu" href="./index.html">Cerrar Sesion</a>
               </li>
             </ul>
           </div>
@@ -66,16 +66,16 @@
         <div class="d-flex justify-content-center  align-items-center div-registrarse">
       <section class=" section-registrarse">
         <div class="row  ">
-          <div class="img-registrarse col-md-4 d-flex justify-content-center align-items-center"> </div>
+          <div class="img-registrarse col-md-5 d-flex justify-content-center align-items-center"> </div>
   
-          <div class="texto-registrarse col-md-8 p-4">
+          <div class="texto-registrarse col-md-7 py-4">
             <div class="logo-registrarse text-center  ">
-              <img class="img-logo-final-home" src="/imagenes/Nani-removebg-preview.png" alt="">
+              <img class="img-logo-final-home" src="./imagenes/Nani-removebg-preview.png" alt="">
             </div>
             <h4 class="fs-1 h4-datospersonales text-center ">¿Olvido su contraseña?</h4>
-            <p class="text-center px-5 mt-4">Recuperar su contraseña es muy facil, solo ingrese el correo electronico que uso para registrarse.</p>
-            <form action="action" class="d-flex justify-content-center align-items-center mb-4 ">
-                  <div class="text-center w-50">
+            <p class="text-center px-1 mb-0 fs-6 mt-4">Recuperar su contraseña es muy facil, solo ingrese el correo electronico que uso para registrarse.</p>
+            <form action="action" class=" mb-4 ">
+                  <div class="text-center">
                   <label for="nombre" class="form-label mb-0 fw-semibold"></label>
                   <input type="text" class="form-control form-control-datos" id="nombre" placeholder="Correo electronico">
                 </div>
@@ -84,11 +84,8 @@
   <div class="boton-de-registro text-center ">
     <a href="#"><button class="bn632-hover bn26">Enviar</button></a>
   </div>
-  <div class="text-center fs-5 ">
-    <a class="m-2 texto-subrayado-formularios" href="/login.html">¿Ya esta registrado?</a>
-  </div>
-  <div class="text-center fs-5  mt-2 ">
-    <a class="m-2 texto-subrayado-formularios " href="">¿Olvido su contraseña?</a>
+  <div class="text-center fs-6 ">
+    <a class="m-2 texto-subrayado-formularios" href="./login.html">¿Ya esta registrado?</a>
   </div>
     
    
@@ -104,31 +101,31 @@
         <div class="divfooter col-lg-4">
           <p class="mb-3 text-center titulos-footer-general">CONTACTOS</p>
           <div class="mb-4">
-            <p class="mb-0 text-center"><img class="iconos" src="/imagenes/icons8-gps-50.png" alt="">Pablo Podesta 451,
+            <p class="mb-0 text-center"><img class="iconos" src="./imagenes/icons8-gps-50.png" alt="">Pablo Podesta 451,
               B1625 Belén de Escobar</p>
             <p class="text-center mt-0">Provincia de Buenos Aires</p>
           </div>
           <div class="mb-4 text-center">
-            <p><img class="iconos" src="/imagenes/icons8-teléfono-celular-50.png" alt="">+54 (11)1111-1111</p>
+            <p><img class="iconos" src="./imagenes/icons8-teléfono-celular-50.png" alt="">+54 (11)1111-1111</p>
           </div>
           <div class="mb-4 text-center">
-            <p><img class="iconos" src="/imagenes/icons8-whatsapp-50negro.png" alt="">+54 (11)1111-1111</p>
+            <p><img class="iconos" src="./imagenes/icons8-whatsapp-50negro.png" alt="">+54 (11)1111-1111</p>
           </div>
           <div class="mb-4 text-center">
-            <p class=""><img class="iconos pe-1" src="/imagenes/icons8-correo-50.png" alt="">estoesunaprueba@gmail.com</p>
+            <p class=""><img class="iconos pe-1" src="./imagenes/icons8-correo-50.png" alt="">estoesunaprueba@gmail.com</p>
           </div>
           <div class="text-center iconos3 pb-2">
             <div class="">
-              <a class="link" href="#"><img class=" iconos2" src="/imagenes/icons8-instagram-50 black.png" alt=""></a>
+              <a class="link" href="#"><img class=" iconos2" src="./imagenes/icons8-instagram-50 black.png" alt=""></a>
             </div>
             <div>
-              <a class="link" href="#"><img class=" iconos2" src="/imagenes/icons8-tik-tok-50 black.png" alt=""></a>
+              <a class="link" href="#"><img class=" iconos2" src="./imagenes/icons8-tik-tok-50 black.png" alt=""></a>
             </div>
             <div>
-              <a class="link" href="#"> <img class=" iconos2" src="/imagenes/icons8-facebook-50 black.png" alt=""></a>
+              <a class="link" href="#"> <img class=" iconos2" src="./imagenes/icons8-facebook-50 black.png" alt=""></a>
             </div>
             <div>
-              <a class="link" href="#"><img class=" iconos2" src="/imagenes/icons8-youtube-play-50 black.png" alt=""></a>
+              <a class="link" href="#"><img class=" iconos2" src="./imagenes/icons8-youtube-play-50 black.png" alt=""></a>
             </div>
           </div>
         </div>
@@ -163,7 +160,7 @@
         </div>
       
         <div class="contenedor-logo-final-general">
-          <img class="img-logo-final-general" src="/imagenes/Nani-removebg-preview.png" alt="">
+          <img class="img-logo-final-general" src="./imagenes/Nani-removebg-preview.png" alt="">
         </div>
       </footer>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
